# rust-cms-backend

./: .env  .gitignore  Cargo.toml  Makefile
api/: .gitignore  Cargo.toml
api/src/: lib.rs  main.rs
api/src/db_connection/: connection.rs
backend/: Cargo.toml
backend/src/: main.rs
config/: config-blank.json  config-dev.json
db-connection/: Cargo.toml
db-connection/ssl/: ca.crt  mongodb.crt  mongodb.key
migrations/201908061444_create_users/: up.sql
request/: login-user.json  register-user.json
secrets/: ca.pem  client-cert.pem  client-key.pem  mysql.key  server-cert.pem  server-key.pem
server/: Cargo.toml  Dockerfile  Makefile  html.html  post.html
server/config/: config-dev.json  config-test.json
server/request/: login-user.json  recover-user.json  register-user.json
server/secrets/: ca.pem  mongodb.crt
server/src/: lib.rs  main.rs  structs.rs
server/src/api/: mod.rs
server/src/config/: .mod.rs.swp  config-dev.json  config-test.json  configLoader.rs  mod.rs
server/src/data/: mod.rs
server/src/database/: mod.rs
server/src/models/: mod.rs
src/: config.rs  database.rs  db_api.rs  mail.rs  main.rs  models.rs  other.rs  server.rs  test.rs
src/models/: mod.rs
src/tests/: mod.rs
src/utils/: mod.rs
src/utils/config/: mod.rs
src/utils/database/: mod.rs
src/utils/mail/: mod.rs
src/utils/other/: mod.rs
