[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["m0ric <andreicristian6@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "*", features = ["ssl"] }
dotenv = "0.14.1"
actix-web = "1.0.5"