[package]
name = "server"
version = "0.1.0"
authors = ["m0ric <andreicristian6@protonmail.com>", "Marius C <mfc@marius-cristian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "*", features = ["ssl"] }

actix-web = "1.0.5"

serde = "1.0.97"
serde_json="1.0.40"
serde_derive="1.0.97"

bcrypt = "0.4"

regex = "1"

time = "0.1"

reqwest = "0.9.20"

rand = "0.7.0"
