[package]
name = "server"
version = "0.1.0"
authors = ["Andrei C <andreicristian6@protonmail.com>", "Marius C <mfc@marius-cristian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.8.3"
actix-web = "1.0.5"
serde = "1.0.97"
serde_json="1.0.40"
serde_derive="1.0.97"
mongodb = {version = "0.3.12", features = ["ssl"] }
bcrypt = "0.4"
